--- a/index.Rmd
+++ b/index.Rmd
@@ -209,7 +209,7 @@ Column
 </table> 
 
 ```{r}
-tags$div(class="alert alert-dismissible alert-danger",
+tags$div(class="alert alert-dismissible alert-warning",
          style="display:none",
          tags$button(HTML("&times;"), 
                      type="button", 
